tests/ui/regions/region-object-lifetime-4.stderr
error: lifetime may not live long enough
  --> $DIR/region-object-lifetime-4.rs:12:5
   |
LL | fn borrowed_receiver_related_lifetimes2<'a,'b>(x: &'a (dyn Foo + 'b)) -> &'b () {
   |                                         -- -- lifetime `'b` defined here
   |                                         |
   |                                         lifetime `'a` defined here
LL |     x.borrowed()
   |     ^^^^^^^^^^^^ function was supposed to return data with lifetime `'b` but it is returning data with lifetime `'a`
   |
   = help: consider adding the following bound: `'a: 'b`

error: aborting due to 1 previous error

